--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cleany
 description: A CLI tool to generate Clean Architecture feature structure for Flutter projects
-version: 0.0.47
+version: 0.0.48
 # repository: https://github.com/my_org/my_repo
 
 environment:
@@ -28,6 +28,7 @@ dependencies:
   equatable: ^2.0.7
   package_info_plus: ^9.0.0
   device_info_plus: ^12.3.0
+  yaml: ^3.1.3
 
 
 
